HUE-6348 [home] Fix jumpy header on hover

--- a/desktop/core/src/desktop/static/desktop/less/home.less
+++ b/desktop/core/src/desktop/static/desktop/less/home.less
@@ -45,6 +45,10 @@
   letter-spacing: 0.035em;
   font-size: 15px;
   color: @cui-gray-700;
+
+  .sorting {
+    border-top: 1px solid transparent;
+  }
 }
 
 .doc-browser-empty {
